[gd_scene load_steps=14 format=2]

[ext_resource path="res://screens/lair/lair.gd" type="Script" id=1]
[ext_resource path="res://addons/rlgd/nodes/turn_system/turn_system.tscn" type="PackedScene" id=2]
[ext_resource path="res://systems/tile_system/tile_system.tscn" type="PackedScene" id=3]
[ext_resource path="res://systems/entity_system/entity_system.tscn" type="PackedScene" id=4]
[ext_resource path="res://systems/generator_system/generator_system.tscn" type="PackedScene" id=6]
[ext_resource path="res://systems/navigation_system/navigation_system.tscn" type="PackedScene" id=7]
[ext_resource path="res://systems/bright_system/bright_system.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/default_theme.tres" type="Theme" id=9]
[ext_resource path="res://systems/security_system/security_system.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/textures/white.png" type="Texture" id=11]
[ext_resource path="res://assets/textures/white_border.png" type="Texture" id=12]
[ext_resource path="res://systems/effect_system/effect_system.tscn" type="PackedScene" id=13]
[ext_resource path="res://systems/hoard_system/hoard_system.tscn" type="PackedScene" id=14]

[node name="Lair" type="Node2D"]
script = ExtResource( 1 )

[node name="TurnSystem" parent="." instance=ExtResource( 2 )]

[node name="TileSystem" parent="." instance=ExtResource( 3 )]

[node name="HoardSystem" parent="." instance=ExtResource( 14 )]

[node name="EntitySystem" parent="." instance=ExtResource( 4 )]

[node name="BrightSystem" parent="." instance=ExtResource( 8 )]

[node name="GeneratorSystem" parent="." instance=ExtResource( 6 )]

[node name="NavigationSystem" parent="." instance=ExtResource( 7 )]

[node name="SecuritySystem" parent="." instance=ExtResource( 10 )]

[node name="EffectSystem" parent="." instance=ExtResource( 13 )]

[node name="Entities" type="YSort" parent="."]

[node name="Effects" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -321.0
margin_right = -1.0
rect_min_size = Vector2( 320, 720 )
theme = ExtResource( 9 )

[node name="ColorRect" type="ColorRect" parent="UI/HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HUD"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="UI/HUD/VBoxContainer"]
modulate = Color( 1, 0.741176, 0.25098, 1 )
margin_right = 320.0
margin_bottom = 17.0
text = "GreedyRogue"
align = 1

[node name="HSeparator" type="HSeparator" parent="UI/HUD/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 17.0
margin_right = 320.0
margin_bottom = 33.0
rect_min_size = Vector2( 0, 16 )

[node name="Health" type="HBoxContainer" parent="UI/HUD/VBoxContainer"]
margin_top = 33.0
margin_right = 320.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="UI/HUD/VBoxContainer/Health"]
margin_right = 160.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Health"

[node name="Value" type="TextureProgress" parent="UI/HUD/VBoxContainer/Health"]
margin_left = 160.0
margin_right = 320.0
margin_bottom = 17.0
size_flags_horizontal = 3
value = 100.0
texture_over = ExtResource( 12 )
texture_progress = ExtResource( 11 )
tint_over = Color( 0.901961, 0.305882, 0.278431, 1 )
tint_progress = Color( 0.901961, 0.305882, 0.278431, 1 )
nine_patch_stretch = true
stretch_margin_left = 1
stretch_margin_top = 1
stretch_margin_right = 1
stretch_margin_bottom = 1

[node name="HSeparator2" type="HSeparator" parent="UI/HUD/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 50.0
margin_right = 320.0
margin_bottom = 66.0
rect_min_size = Vector2( 0, 16 )

[node name="Anxiety" type="HBoxContainer" parent="UI/HUD/VBoxContainer"]
margin_top = 66.0
margin_right = 320.0
margin_bottom = 83.0

[node name="Label" type="Label" parent="UI/HUD/VBoxContainer/Anxiety"]
margin_right = 160.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Anxiety"

[node name="Value" type="Control" parent="UI/HUD/VBoxContainer/Anxiety"]
margin_left = 160.0
margin_right = 320.0
margin_bottom = 17.0
size_flags_horizontal = 3

[node name="Progress" type="TextureProgress" parent="UI/HUD/VBoxContainer/Anxiety/Value"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
texture_over = ExtResource( 12 )
texture_progress = ExtResource( 11 )
tint_over = Color( 0.839216, 0.388235, 0.843137, 1 )
tint_progress = Color( 0.839216, 0.388235, 0.843137, 1 )
nine_patch_stretch = true
stretch_margin_left = 1
stretch_margin_top = 1
stretch_margin_right = 1
stretch_margin_bottom = 1

[node name="HSeparator3" type="HSeparator" parent="UI/HUD/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 83.0
margin_right = 320.0
margin_bottom = 99.0
rect_min_size = Vector2( 0, 16 )

[node name="Gold" type="HBoxContainer" parent="UI/HUD/VBoxContainer"]
margin_top = 99.0
margin_right = 320.0
margin_bottom = 116.0

[node name="Label" type="Label" parent="UI/HUD/VBoxContainer/Gold"]
margin_right = 160.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Gold"

[node name="Value" type="Label" parent="UI/HUD/VBoxContainer/Gold"]
modulate = Color( 1, 0.741176, 0.25098, 1 )
margin_left = 160.0
margin_right = 320.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "0"

[node name="HSeparator4" type="HSeparator" parent="UI/HUD/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 116.0
margin_right = 320.0
margin_bottom = 132.0
rect_min_size = Vector2( 0, 16 )

[node name="Title2" type="Label" parent="UI/HUD/VBoxContainer"]
modulate = Color( 1, 0.741176, 0.25098, 1 )
margin_top = 132.0
margin_right = 320.0
margin_bottom = 149.0
text = "Items"
align = 1

[node name="Loading" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 9 )

[node name="ColorRect" type="ColorRect" parent="UI/Loading"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Message" type="CenterContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 9 )

[node name="MarginContainer" type="MarginContainer" parent="UI/Message"]
margin_left = 390.0
margin_top = 301.0
margin_right = 890.0
margin_bottom = 418.0

[node name="ColorRect" type="ColorRect" parent="UI/Message/MarginContainer"]
margin_right = 500.0
margin_bottom = 117.0
color = Color( 0, 0, 0, 1 )

[node name="MarginContainer" type="MarginContainer" parent="UI/Message/MarginContainer"]
margin_right = 500.0
margin_bottom = 117.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Label" type="Label" parent="UI/Message/MarginContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 490.0
margin_bottom = 107.0
text = "Heye
What upasdasdakhdsljahslhdalhd
dsfas
adf
sadfadsfasdfadf"
align = 1
valign = 1
